--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     window.$docsify = {
       loadSidebar: true,
 
-      loadNavbar: true,
+      // loadNavbar: true,
       
       subMaxLevel: 0,
 
@@ -85,8 +85,7 @@
       },
 
       footer: {
-      copy: '<span>xiahan &copy; 2022</span>',
-      // auth: 'by Me',
+      copy: '<span> wechat:xiahan_life |</span>',
       pre: '<hr/>',
       style: 'text-align: right;',
       class: 'className',
