--- a/index.html
+++ b/index.html
@@ -83,13 +83,15 @@
         // title: 'Table of Contents',
       },
 
+      // logo: '/logo.jpg',
+
       footer: {
-      copy: '<span> wechat:xiahan_life |</span>',
-      pre: '<hr/>',
-      style: 'text-align: right;',
-      class: 'className',
-    },
-  
+        copy: '<span> wechat:xiahan_life |</span>',
+        pre: '<hr/>',
+        style: 'text-align: right;',
+        class: 'className',
+      },
+    
   };
   </script> 
   
