--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       
       subMaxLevel: 0,
 
-      name: "xiahan blog",
+      name: "Xiahan's Blog",
             
       toc: {
         scope: '.markdown-section',
